# AspectShift-HtoV

./: .gitignore  E1_UPDATER_SIGNING_AUDIT.md  E2_RELEASE_PIPELINE_AUDIT.md  E5_UPDATE_UX_INSTALL_FLOW.md  README.md  ROADMAP.MD  index.html  main.py  package-lock.json  package.json  round_corners.py
.github/workflows/: release.yml
LICENSE/: README.md  THIRD-PARTY-NOTICES.txt
LICENSE/LICENSES/: FFMPEG-GPL.txt  OTHER-LICENSES.txt
scripts/: verify-text-style-matrix.ps1  verify-text-style-preview.html
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  EULA.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: builtin_presets.json
src-tauri/resources/presets/: aspect_ratio_presets.json  platform_specific_presets.json
src-tauri/src/: dependency_manager.rs  download_manager.rs  lib.rs  license_documents.rs  main.rs  manifest_service.rs  os_utils.rs  runtime_paths.rs
src-tauri/src/auth/: activation.rs  auth_commands.rs  auth_errors.rs  auth_events.rs  auth_models.rs  mod.rs  outcome_mapping.rs  refresh.rs
src-tauri/src/auth/config/: auth_config.rs  mod.rs
src-tauri/src/auth/contracts/: CONTRACTS.md  mod.rs
src-tauri/src/auth/crypto/: jwt.rs
src-tauri/src/auth/crypto/keys/: 2026-q2.pub  2026-q4.pub
src-tauri/src/auth/machine/: machine_id.rs
src-tauri/src/auth/manager/: auth_manager.rs
src-tauri/src/auth/providers/: dev_provider.rs  edge_provider.rs  mod.rs  production_provider.rs  trait.rs
src-tauri/src/auth/state/: auth_metadata.rs  auth_state.rs  license_tier.rs
src-tauri/src/auth/storage/: secure_storage.rs
src-tauri/src/auth/validators/: entitlement_validator.rs  jwt_validator.rs  launch_validation.rs
src-tauri/src/subtitles/: ass_writer.rs  mod.rs  positioning.rs  srt_writer.rs  timing.rs  whisper_runner.rs
src-tauri/src/video/: batch.rs  batch_processor.rs  config.rs  convert.rs  ffmpeg.rs  ffmpeg_args_builder.rs  filter_builder.rs  lock.rs  mod.rs  paths.rs  preset_adapter.rs  presets.rs  probe.rs  queue.rs  render_layout.rs  targets.rs  text_fonts.rs  types.rs  validation.rs
src/components/: AuthPanel.tsx  PresetsPanel.tsx  VideoCanvas.tsx
src/components/layout/: Header.tsx  HelpSettingsPanel.tsx  LicenseSettingsPanel.tsx  SettingsOverlay.tsx
src/components/modals/: AboutDialog.tsx  DependencyModal.tsx  FirstRunOnboardingOverlay.tsx  LicensePanelModal.tsx  OnboardingModal.tsx  RefreshConfirmDialog.tsx  UpdateModal.tsx  onboardingMotion.ts  usePresenceTransition.ts
src/components/ui/: LicenseStatusDot.tsx
src/context/: AppShellContext.tsx
src/data/: legalContent.ts
src/services/: dependencyManager.ts
src/types/: backend.ts
src/utils/: appShortcuts.ts  buildMetadata.ts  licenseIndicatorMapping.ts  productEdition.ts  resolvedVideoGeometry.ts  subtitleOverlay.ts  textOverlay.ts
