[package]
name = "aspectshift-htov"
version = "0.1.2"
description = "Professional batch video converter for aspect ratio transformation, platform presets, and creator workflows."
edition = "2021"
authors = ["Vishwas Sharma"]
license = "GPL-3.0-or-later"
repository = "https://github.com/vishwassharma38/AspectShift-HtoV"
homepage = "https://github.com/vishwassharma38/AspectShift-HtoV"
default-run = "aspectshift-htov"

[package.metadata.tauri-winres]
CompanyName = "Software From Vish"
ProductName = "AspectShift-HtoV"
FileDescription = "Professional batch video converter for aspect ratio transformation, platform presets, and creator workflows."
InternalName = "AspectShift-HtoV"
OriginalFilename = "AspectShift-HtoV.exe"
LegalCopyright = "Copyright © 2026 Vishwas Sharma"

ProductVersion = "0.1.2"
FileVersion = "0.1.2"

Comments = "Professional batch video converter for aspect ratio transformation, platform presets, and creator workflows."

LegalTrademarks = "AspectShift-HtoV is a trademark of Software From Vish"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aspectshift_htov_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
uuid = { version = "1.23.0", features = ["v4"] }
tokio-util = { version = "0.7.18", features = ["full"] }
specta = { version = "2.0.0-rc.23", features = ["derive"] }
specta-typescript = "0.0.10"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10"
futures-util = "0.3"
keyring = { version = "3", features = ["windows-native"] }
jsonwebtoken = "9"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
dotenvy = "0.15"

[features]
dev-auth = []
